Fix button - bar spacing

--- a/style/style.css
+++ b/style/style.css
@@ -490,6 +490,7 @@ hr {
   width: 130px;
   height: 45px;
   margin-top: 22px;
+  margin-bottom: 32px;
   background: #fff;
   border-radius: 8px;
   font-weight: 500;
